--- a/PixelStudio/Views/Administration/Order_Details.cshtml
+++ b/PixelStudio/Views/Administration/Order_Details.cshtml
@@ -9,7 +9,7 @@
 <div>
     <h4>Order</h4>
     <hr />
-    <dl class="dl-horizontal">
+    <dl class="container" >
         <dt>
             Номер заказа:
         </dt>
