--- a/PixelStudio/Views/Administration/Delete_Service.cshtml
+++ b/PixelStudio/Views/Administration/Delete_Service.cshtml
@@ -6,9 +6,10 @@
 
 <h2>Delete_Service</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Вы дейсвительно хотите удалить услугу? <br />Are you sure you want to delete this?</h3>
+<h3 class="text-danger">Удаление затронет все связанные данные в БД</h3>
 <div>
-    <h4>PhotoService</h4>
+    <h4>Photo Service management:</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -65,8 +66,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "All_Services")
+            <input type="submit" value="Delete" class="btn btn-danger" />
+            @Html.ActionLink("Back to List", "All_Services", null ,new { @class = "btn btn-default" })
         </div>
     }
 </div>
