--- a/PixelStudio/Views/Home/ShopCard.cshtml
+++ b/PixelStudio/Views/Home/ShopCard.cshtml
@@ -30,10 +30,9 @@
         <th>
             Ваша фотография
         </th>
-        @foreach (var item in Model)
-        {
-            <th>Суммарная цена: @Html.DisplayFor(modelItem => item.allPrice)</th>
-        }
+        
+            <th class="text-warning">Суммарная цена: @ViewBag.AllPrice</th>
+        
         
         <th></th>
     </tr>
