--- a/PixelStudio/Views/Administration/Create_new_Service.cshtml
+++ b/PixelStudio/Views/Administration/Create_new_Service.cshtml
@@ -41,14 +41,19 @@
                 @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
             </div>
         </div>
+  
+                <div class="form-group">
+                <span class="control-label col-md-2">Подходящая цветованя схема</span>
+                <div class="col-md-10">
+                    @Html.RadioButton("ColorType", "Mono") Монохромная
+                    @Html.RadioButton("ColorType", "Color") Цветная
+                    @Html.RadioButton("ColorType", "All") Для всех
+                    
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.ColorType, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ColorType, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ColorType, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
+ 
+        
 
         <div class="form-group">
             @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
