--- a/PixelStudio/Views/Home/About_Company.cshtml
+++ b/PixelStudio/Views/Home/About_Company.cshtml
@@ -17,7 +17,7 @@
         <li><u>Почему именно фото фото?</u></li>
         Основатель компании является большим ценителем фотографий. Его фотоколлекция насчитывает около 300 фотографий
     </ul>
-    <div class="btn btn-default" style="margin-top:20px">
-        @Html.ActionLink("Go Home", "Home", "Home")
+    <div style="margin-top:20px">
+        @Html.ActionLink("Go Home", "Home", "Home", new { @class = "btn btn-default" })
     </div>
 </div>
