--- a/PixelStudio/Views/Home/Contact.cshtml
+++ b/PixelStudio/Views/Home/Contact.cshtml
@@ -17,7 +17,7 @@
     }
 </style>
 <div id="contacts">
-    <h2 align="center">Contacts</h2>
+    <h2 align="center">Контактная информация</h2>
 
     <u> Вы можете обратиться за помощью: </u><br />
     <b>088-33-667</b><br />
@@ -30,8 +30,8 @@
 
     </div>
 
-    <div class="btn btn-default" style="margin-top:20px">
-        @Html.ActionLink("Go Home", "Home", "Home")
+    <div style="margin-top:20px">
+        @Html.ActionLink("Go Home", "Home", "Home", new { @class = "btn btn-default" })
     </div>
 </div>
 
