--- a/PixelStudio/Views/Administration/Delete_Service.cshtml
+++ b/PixelStudio/Views/Administration/Delete_Service.cshtml
@@ -67,7 +67,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-danger" />
-            @Html.ActionLink("Back to List", "All_Services", null ,new { @class = "btn btn-default" })
+            @Html.ActionLink("Назад", "All_Services", null ,new { @class = "btn btn-default" })
         </div>
     }
 </div>
