--- a/PixelStudio/Views/Administration/Edit_Order.cshtml
+++ b/PixelStudio/Views/Administration/Edit_Order.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Edit_Order";
 }
 
-<h2>Edit_Order</h2>
+<h2>Изменение заказа</h2>
 
 <div>
-    <h4>Order</h4>
+    <h4>Заказы</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -64,7 +64,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-horizontal">
-            <h4>PhotoService</h4>
+            
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
@@ -81,7 +81,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-success" />
             </div>
         </div>
     }
