--- a/PixelStudio/Views/Administration/Edit_Service.cshtml
+++ b/PixelStudio/Views/Administration/Edit_Service.cshtml
@@ -1,10 +1,10 @@
 ﻿@model PixelStudio.Models.PhotoService
 
 @{
-    ViewBag.Title = "Edit_Service";
+    ViewBag.Title = "Edit Service";
 }
 
-<h2>Edit_Service</h2>
+<h2>Редактировать услугу</h2>
 
 
 @using (Html.BeginForm())
@@ -16,7 +16,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.ServiceId, htmlAttributes: new { @class = "control-label col-md-2" })
+            <span class="control-label col-md-2">Код услуги:</span>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.ServiceId, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ServiceId, "", new { @class = "text-danger" })
@@ -24,7 +24,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+            <span class="control-label col-md-2">Название услуги:</span>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
@@ -32,7 +32,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.PhotoFormat, htmlAttributes: new { @class = "control-label col-md-2" })
+            <span class="control-label col-md-2">Формат фото:</span>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.PhotoFormat, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.PhotoFormat, "", new { @class = "text-danger" })
@@ -40,7 +40,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
+            <span class="control-label col-md-2">Описание:</span>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
@@ -48,7 +48,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ColorType, htmlAttributes: new { @class = "control-label col-md-2" })
+            <span class="control-label col-md-2">Подходящая цветовая схема:</span>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.ColorType, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ColorType, "", new { @class = "text-danger" })
@@ -56,7 +56,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
+            <span class="control-label col-md-2">Цена:</span>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
@@ -73,14 +73,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-success" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "All_Services")
+    @Html.ActionLink("Назад", "All_Services", null, new { @class = "btn btn-default" })
 </div>
 
 @section Scripts {
