--- a/PixelStudio/Views/Home/ShowMono.cshtml
+++ b/PixelStudio/Views/Home/ShowMono.cshtml
@@ -9,7 +9,7 @@
 @*<p>
     @Html.ActionLink("Create New", "Create")
 </p>*@
-<table class="table">
+<table class="table" style="border:dashed">
     <tr>
         @*<th>
             @Html.DisplayNameFor(model => model.ServiceId)
@@ -59,8 +59,8 @@
             <img src="@Url.Content(item.Image)" width="200" height="200" />
         </td>
         <td>
-            @Html.ActionLink("Buy", "MakeOrder", new { id = item.ServiceId })
-            @Html.ActionLink("Details", "Service_Details", new { id = item.ServiceId })
+            @Html.ActionLink("Купить", "MakeOrder", new { id = item.ServiceId }, new { @class = "btn btn-success" })
+            @Html.ActionLink("Подробнее", "Service_Details", new { id = item.ServiceId }, new { @class = "btn btn-info" })
         </td>
     </tr>
 }
