--- a/PixelStudio/Views/UserLogin/Register.cshtml
+++ b/PixelStudio/Views/UserLogin/Register.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Register";
 }
 
-<h2>Registration</h2>
+<h2>Зарагестрировать учётную запись</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,12 +12,12 @@
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>RegisterSystem</h4>
+    <h4>Система регистрации</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
-        @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
-        @*<label class="control-label col-md-2">Name</label>*@
+        <span class="control-label col-md-2">Имя пользователя:</span>
+       
         <div class="col-md-10">
             @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
@@ -25,7 +25,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.UserSurname, htmlAttributes: new { @class = "control-label col-md-2" })
+        <span class="control-label col-md-2">Фамилия пользователя:</span>
         @*<label class="control-label col-md-2">Surname</label>*@
         <div class="col-md-10">
             @Html.EditorFor(model => model.UserSurname, new { htmlAttributes = new { @class = "form-control" } })
@@ -34,7 +34,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Phone, htmlAttributes: new { @class = "control-label col-md-2" })
+        <span class="control-label col-md-2">Номер телефона:</span>
         <div class="col-md-10">
             @Html.EditorFor(model => model.Phone, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Phone, "", new { @class = "text-danger" })
@@ -44,7 +44,7 @@
 
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+        <span class="control-label col-md-2">Ел.почта:</span>
         <div class="col-md-10">
             @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
@@ -53,7 +53,7 @@
 
     <div class="form-group">
 
-        @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
+        <span class="control-label col-md-2">Пароль:</span>
         <div class="col-md-10">
             @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
@@ -62,7 +62,7 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Register" class="btn btn-default" />
+            <input type="submit" value="Register" class="btn btn-success" />
         </div>
     </div>
     @if (ViewBag.Name != null)
@@ -75,8 +75,8 @@
 </div>
 }
 
-<div class="btn btn-default">
-    @Html.ActionLink("Go login", "Enter", "UserLogin")
+<div>
+    @Html.ActionLink("Назад", "Enter", "UserLogin", new { @class = "btn btn-default" })
 </div>
 
 @section Scripts {
